# project-deep-learning

./: .gitignore  README.md  pyproject.toml
configs/: baseline.yaml  cnn14.yaml  cnn14_1epoch.yaml  smoke.yaml  specaugment.yaml
notebooks/: 01_data_audit.ipynb  02_preprocess.ipynb  03_train_baseline.ipynb  03_train_baseline_v2.ipynb  04a_exp_specaugment_kaggle.ipynb  04b_exp_cnn14_kaggle.ipynb
scripts/: download_icbhi.py  preprocess.py  train.py
src/augment/: specaugment.py
src/data/: annotations.py  icbhi_dataset.py  paths.py  preprocessing.py  splits.py  waveform_dataset.py
src/eval/: metrics.py
src/models/: ast_model.py  cnn14_model.py
src/training/: sam.py  sampler.py  train_loop.py
